# dbForm_v1.2

./: CMakeLists.txt  bank_accounts_0304.db  mainwindow.cpp  mainwindow.h  mainwindow.ui
